added upload page and admin login

--- a/templates/home.html
+++ b/templates/home.html
@@ -35,7 +35,7 @@
     </p>
 
     <div class="d-grid gap-3 col-6 mx-auto mt-5">
-      <a href="/upload" class="btn btn-primary btn-lg fw-bold">
+      <a href="/order"  class="btn btn-primary btn-lg fw-bold">
         📤 Order Your Print Now
       </a>
       <a href="/admin" class="btn btn-dark btn-lg fw-bold">
